After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 633455 - [rtsp] don't let the rtsp connection timeout
[rtsp] don't let the rtsp connection timeout
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-base
0.10.x
Other Linux
: Normal normal
: 0.10.31
Assigned To: GStreamer Maintainers
GStreamer Maintainers
: 633453 633454 (view as bug list)
Depends on:
Blocks:
 
 
Reported: 2010-10-29 12:37 UTC by Thijs Vermeir
Modified: 2010-10-29 13:23 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
rtsp: don't let the rtsp connection timeout (1.21 KB, patch)
2010-10-29 12:38 UTC, Thijs Vermeir
none Details | Review

Description Thijs Vermeir 2010-10-29 12:37:35 UTC
Because we should act before the rtsp server does a timeout, we
reduce the timeout-time with 5 seconds, this should be safe to always
keep te rtsp connection alive.
Comment 1 Thijs Vermeir 2010-10-29 12:38:21 UTC
Created attachment 173476 [details] [review]
rtsp: don't let the rtsp connection timeout

Because we should act before the rtsp server does a timeout, we
reduce the timeout-time with 5 seconds, this should be safe to always
keep te rtsp connection alive.
Comment 2 Thijs Vermeir 2010-10-29 12:41:30 UTC
*** Bug 633453 has been marked as a duplicate of this bug. ***
Comment 3 Thijs Vermeir 2010-10-29 12:42:19 UTC
*** Bug 633454 has been marked as a duplicate of this bug. ***
Comment 4 Wim Taymans 2010-10-29 13:23:51 UTC
Commited. I also commited a little improvement that gets rid of the hardcoded 5 seconds (which would be too big for very short session timeout values)

commit 2e888cb7849d5a22327578b545dfdf5f4355a2e9
Author: Thijs Vermeir <thijsvermeir@gmail.com>
Date:   Fri Oct 29 14:24:54 2010 +0200

    rtsp: don't let the rtsp connection timeout
    
    Because we should act before the rtsp server does a timeout, we
    reduce the timeout-time with 5 seconds, this should be safe to always
    keep te rtsp connection alive.
    
    https://bugzilla.gnome.org/show_bug.cgi?id=633455